CMAKE_MINIMUM_REQUIRED(VERSION 3.9)
PROJECT(ch10)

SET(CMAKE_CXX_STANDARD 14)
#SET_TARGET_PROPERTIES(targets ... PROPERTIES RUNTIME_OUTPUT_DERECTORY "${CMAKE_BINARY_DIR}/bin")
SET( EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
AUX_SOURCE_DIRECTORY(. source_lists)
ADD_EXECUTABLE(ch10 ${source_lists})

